--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ BINANCE_API_SECRET=tu_api_secret_aqui
 WORLDCOIN_API_KEY=0x3973ac21928d659735f830c923142797ca87b9d3
 
 # Información bancaria
-BANK_ACCOUNT=tu_numero_de_cuenta_banco_industrial
+BANK_ACCOUNT=7177242141
